--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -9,6 +9,7 @@
 </head>
 <body class="contenedor">
     <div>
+        <img arc="{% static'img/logo.png'%}" width="15%">
         <a href="{% url 'home' %}">IR A HOME</a>
         <a href="{% url 'nosotros' %}">IR A NOSOTROS</a>
         <a href="{% url 'noticias:listar' %}">IR A NOTICIAS</a>
