--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'img/coffee.ico' %}">
-    <title>Mi blog | {% block titulo %}{% endblock titulo %}</title>
+    <title> {% block titulo %}Mi blog |{% endblock titulo %}</title>
 </head>
 <body class="contenedor">
     <div>
@@ -14,16 +14,14 @@
         <a href="{% url 'home' %}">IR A HOME</a>
         <a href="{% url 'nosotros' %}">IR A NOSOTROS</a>
         <a href="{% url 'noticias:listar' %}">IR A NOTICIAS</a>
-
         {% if user.is_authenticated %}
             <strong>Hola {{ user.username }}</strong>
-
             <a href="{% url 'logout' %}">LOGOUT</a>
         {% else %}
             <a href="{% url 'login' %}">LOGIN</a>
-            <a href="{% url 'registro' %}">REGISTRO</a>
+	<a href="{% url 'registro' %}">REGISTRO</a>
         {% endif %}
-        
+
     </div>
     {% block contenido %}
     {% endblock contenido %}
