--- a/blog/templates/nosotros.html
+++ b/blog/templates/nosotros.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block titulo %}NOSOTROS{% endblock titulo %}
+{% block titulo %}Nosotros{% endblock titulo %}
 {% block contenido %}
     <h2>Sobre mi</h2>
 {% endblock contenido %}
