--- a/blog/templates/noticias/listar.html
+++ b/blog/templates/noticias/listar.html
@@ -1,17 +1,23 @@
 {% extends 'base.html' %}
 {% load static %}
- 
-{% block titulo %}Noticias{% endblock titulo %}
- 
+
 {% block contenido %}
     <h2>Aca estan mis noticias</h2>
- 
-    {% for noti in noticias %}
-    <img src="{{noti.imagen.url}}" width="50">
-    <p>TITULO: {{noti.titulo}}</p>
-    <p>FECHA: {{noti.fecha_publicacion}}</p>
-    <p>CATEGORIA: {{noti.categoria_noticia}}</p>
-    <p>CUERPO: {{noti.contenido}}</p>
-    <br>
-{% endfor %}
+        <div class="submenu">
+            <a href="{% url 'noticias:listar' %}">TODAS</a>
+            {% for cat in categorias %}
+                <a href="?id={{cat.pk}}">{{cat.nombre}}</a>
+            {% endfor %}
+        </div>
+        {% if noticias %}
+            {% for noti in noticias %}
+                <img src="{{ noti.imagen.url }}" width="50">
+                <p><a href="{% url 'noticias:detalle' noti.pk %}">TITULO: {{ noti.titulo }}</a></p>
+                <p>FECHA: {{ noti.fecha_publicacion }}</p>
+                <p>CATEGORIA: {{ noti.categoria_noticia }}</p>
+                <p>CONTENIDO: {{ noti.contenido }}</p>
+            {% endfor %}
+        {% else %}
+            <h2>No hay noticias</h2>
+        {% endif %}
 {% endblock contenido %}
