--- a/blog/templates/noticias/detalle.html
+++ b/blog/templates/noticias/detalle.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
  
-{% block titulo %}Noticia{% endblock titulo %}
+{% block titulo %}Recetas{% endblock titulo %}
  
 {% block contenido %}
     <h2>Mi noticia detallada</h2>
