--- a/templates/articulos/listarArticulos.html
+++ b/templates/articulos/listarArticulos.html
@@ -1,36 +1,22 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base.html' %}
+{% load static %}
 
-<head>
-  <title>Title</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% block titulo %}Articulos{% endblock titulo %}
 
-  <!-- Bootstrap CSS v5.2.1 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+{% block contenido %}
+  <h2>Articulos:</h2>
 
-</head>
-
-<body>
-  <header>
-    <!-- place navbar here -->
-  </header>
-  <main>
-<h1>Esta es la pagina de listar articulos</h1>
-  </main>
-  <footer>
-    <!-- place footer here -->
-  </footer>
-  <!-- Bootstrap JavaScript Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script>
-</body>
-
-</html>
+  {% if articulos %}
+    {% for articulo in articulos %}
+    <img src="{{ articulo.imagen.url }}" width="50">
+    <p>Titulo: {{ articulo.titulo }}</p>
+    <p>Contenido Breve: {{ articulo.contenido_breve }}</p>
+    <p>Contenido Completo: {{ articulo.contenido_completo }}</p>
+    <p>Fecha Publicacion: {{ articulo.fecha_publicacion }}</p>
+    <p>Categoria Articulo: {{ articulo.categoria_articulo }}</p>
+    <p>Usuario Articulo: {{ articulo.usuario_articulo }}</p>
+    {% endfor %}
+  {% else %}
+    <h2>No hay noticias</h>
+  {% endif %}
+{% endblock contenido %}
