listar y boton para crear categoria

--- a/templates/articulos/listarArticulos.html
+++ b/templates/articulos/listarArticulos.html
@@ -17,6 +17,6 @@
     <p>Usuario Articulo: {{ articulo.usuario_articulo }}</p>
     {% endfor %}
   {% else %}
-    <h2>No hay noticias</h>
+    <h2>No hay Articulos</h>
   {% endif %}
 {% endblock contenido %}
