--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'articulos:listar' %}">Articulos</a>
+                            <a class="nav-link" href="{% url 'articulos:listarArticulos' %}">Articulos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
@@ -63,7 +63,7 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="{% url 'articulos:addarticulo' %}">Crear Articulo</a></li>
-                                    <li><a class="dropdown-item" href="{% url 'articulos:addcategoria' %}">Crear Categoria</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'articulos:listarCategorias' %}">Mostrar Categoria</a></li>
                                 </ul>                                
                             </li>
                         {% endif %}                    
