--- a/templates/base.html
+++ b/templates/base.html
@@ -45,16 +45,31 @@
                                 Categorias
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="{% url 'articulos:listarArticulos' %}">TODAS</a></li>
+                                <hr class="dropdown-divider">
+                                {% for cat in categorias  %}
+                                    <li><a class="dropdown-item" href="?categoria={{ cat.pk }}">{{ cat.descripcion }}</a></li>
+                                {% endfor %}
                             </ul>
                         </li>
 
-
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Filtros
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" >Por fecha:</a></li>
+                                <li><a class="dropdown-item" href="?antiguedad_asc=1">ASCENDENTE</a></li>
+                                <li><a class="dropdown-item" href="?antiguedad_desc=1">DESCENDENTE</a></li>                                
+                                <hr class="dropdown-divider">
+                                <li><a class="dropdown-item">Por Título:</a></li>
+                                <li><a class="dropdown-item" href="?orden_asc=1">ASCENDENTE</a></li>
+                                <li><a class="dropdown-item" href="?orden_desc=1">DESCENDENTE</a></li>
+                                <hr class="dropdown-divider">
+                            </ul>
+                        </li>
+                        
                         {% if user.is_authenticated and user.tipo_usuario == 'colaborador' %}
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
