--- a/templates/usuarios/registro.html
+++ b/templates/usuarios/registro.html
@@ -30,7 +30,7 @@
                         </ul>
                         <ul>                        <!-- Prueba tipo de usuario -->
                             <label>Tipo de Usuario:</label>
-                            <input type="radio" name="tipo_usuario" value="publico" id="radioPublico">
+                            <input type="radio" name="tipo_usuario" value="publico" id="radioPublico" checked="checked">
                             <label for="radioPublico">Público</label>                        
                             <input type="radio" name="tipo_Usuario" value="colaborador" id="radioColaborador">
                             <label for="radioColaborador">Colaborador</label>
