--- a/templates/categorias/listarCategorias.html
+++ b/templates/categorias/listarCategorias.html
@@ -15,7 +15,9 @@
                 <div class="mb-3">
                     <ul>
                         <li><p>{{ categoria.descripcion }}</p></li>
-                        <a name="addcategoria" class="btn btn-outline-dark" href="{% url 'articulos:edit_categoria' categoria.pk %}" role="button">Editar categoria</a>
+                        <a name="edit_categoria" class="btn btn-outline-dark" href="{% url 'articulos:edit_categoria' categoria.pk %}" role="button">Editar categoria</a>
+                        <a name="delete_categoria" class="btn btn-outline-dark" href="{% url 'articulos:delete_categoria' categoria.pk %}"
+                            role="button">Borrar categoria</a>
                     </ul>
                     
                 </div>                
