Cuando se borra un categoria, la noticia de esa categoria se agrega el la leyenda sin categoria

--- a/templates/articulos/listarArticulos.html
+++ b/templates/articulos/listarArticulos.html
@@ -13,7 +13,12 @@
     <p>Contenido Breve: {{ articulo.contenido_breve }}</p>
     <p>Contenido Completo: {{ articulo.contenido_completo }}</p>
     <p>Fecha Publicacion: {{ articulo.fecha_publicacion }}</p>
-    <p>Categoria Articulo: {{ articulo.categoria_articulo }}</p>
+    {% if articulo.categoria_articulo is null %}
+      <p>Categoria Articulo: 'Sin categoria'</p>
+    {% else %}
+      <p>Categoria Articulo: {{ articulo.categoria_articulo }}</p>
+    {% endif %}
+    
     <p>Usuario Articulo: {{ articulo.usuario_articulo }}</p>
     {% endfor %}
   {% else %}
