Creada la aplicación de contacto

--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -5,4 +5,5 @@
 
 {% block contenido %}
 <h2>Pagina Contacto</h2>
+<a href="{% url 'contacto:formContacto' %}">Contactanos!</a>
 {% endblock contenido %}
