--- a/templates/articulos/detalleArticulos.html
+++ b/templates/articulos/detalleArticulos.html
@@ -6,6 +6,67 @@
 
 
 
+<!-- Contenido de la pagina-->
+<section class="py-5">
+    <div class="container px-5 my-5">
+        <div class="row gx-5">
+            <div class="col-lg-3">
+                <div class="d-flex align-items-center mt-lg-5 mb-4">
+                    <img class="img-fluid rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg"
+                        alt="..." />
+                    <div class="ms-3">
+                        <div class="fw-bold">{{ articulo.usuario_articulo.last_name }}, {{ articulo.usuario_articulo.first_name }} </div>
+                        <div class="text-muted">{{ articulo.usuario_articulo }}</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-9">
+                <!-- Post content-->
+                <article>
+                    <!-- Post header-->
+                    <header class="mb-4">
+                        <!-- Post title-->
+                        <h1 class="fw-bolder mb-1">{{ articulo.titulo }}</h1>
+                        <!-- Post meta content-->
+                        <div class="text-muted fst-italic mb-2">{{ articulo.fecha_publicacion }}</div>
+                        <!-- Post categories-->
+                        <a class="badge bg-secondary text-decoration-none link-light" href="#!">{{ articulo.categoria_articulo }}</a>
+                    </header>
+                    <!-- Preview image figure-->
+                    <figure class="mb-4"><img class="img-fluid rounded"
+                            src="{{ articulo.imagen.url }}" alt="..." /></figure>
+                    <!-- Post content-->
+                    <section class="mb-5">
+                        <p class="fs-5 mb-4">{{ articulo.contenido_completo }}</p>
+                        
+                    </section>
+                </article>
+                <!-- seccion de comentarios-->
+                <section>
+                    <div class="card bg-light">
+                        <div class="card-body">
+                            <!-- Comentario form-->
+                            <form class="mb-4"><textarea class="form-control" rows="3"
+                                    placeholder="Join the discussion and leave a comment!"></textarea></form>                            
+                            <!-- comentario-->
+                            <div class="d-flex">                                
+                                <div class="ms-3">
+                                    <div class="fw-bold">Commenter Name</div>
+                                    When I look at the universe and all the ways the universe wants to kill us, I find
+                                    it hard to reconcile that with statements of beneficence.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
 
 
 <img src="{{ articulo.imagen.url }}" width="50">
@@ -54,6 +115,14 @@
 {% endif %}
     <br><br>
     <a name="" id="" class="btn btn-outline-dark" href="{% url 'articulos:listarArticulos' %}" role="button">Volver</a>
+
+
+
+
+
+
+
+
 
 
 
